samples/_failures_safe/1761431725_b3bd48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebeacbe9.c: In function ‘main’:
./samples/SAFE/__tmp_ebeacbe9.c:145:16: error: missing terminating " character
  145 |         printf("No
      |                ^~~
./samples/SAFE/__tmp_ebeacbe9.c:145:9: error: expected expression at end of input
  145 |         printf("No
      |         ^~~~~~
./samples/SAFE/__tmp_ebeacbe9.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebeacbe9.c:145:9: error: expected declaration or statement at end of input
